
[TestListCmdExecuteAll - 1]
✔ Listing all clusters (stub implementation)
► Distribution filter: Kind

---

[TestListCmdExecuteDefault - 1]
✔ Listing running clusters (stub implementation)
► Distribution filter: Kind

---

[TestListCmdHelp - 1]
List all Kubernetes clusters managed by KSail.

Usage:
  list [flags]

Flags:
      --all                         List all clusters including stopped ones
  -d, --distribution Distribution   Kubernetes distribution to list clusters for (default Kind)
  -h, --help                        help for list

---
